--- a/app/src/main/res/drawable/ic_available.xml
+++ b/app/src/main/res/drawable/ic_available.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#000000"
-        android:pathData="M13,3H6c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h2v-8h3c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4zm0,6H8V5h5c1.1,0 2,0.9 2,2s-0.9,2 -2,2z"/>
+        android:fillColor="#4CAF50"
+        android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19,21,7l-1.41,-1.41L9,16.17z" />
 </vector>
