--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" />
+        android:background="@color/bg_green"
+        app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@color/bg_light_grey"
+        app:itemTextColor="@color/bg_light_grey"
+        app:itemActiveIndicatorStyle="@style/Widget.Material3.BottomNavigationView.ActiveIndicator"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
