--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,9 +4,9 @@
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
-        android:id="@+id/bookingFragment"
+        android:id="@+id/parkingFragment"
         android:icon="@drawable/ic_booking"
-        android:title="Booking" />
+        android:title="Parking" />
     <item
         android:id="@+id/historyFragment"
         android:icon="@drawable/ic_history"
