--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,25 @@
 <resources>
     <color name="bg_green">#34A853</color>
     <color name="bg_red">#F44336</color>">
+    <color name="bg_yellow">#FFEB3B</color>
+    <color name="bg_blue">#2196F3</color>
+    <color name="bg_orange">#FF9800</color>
+    <color name="bg_purple">#9C27B0</color>
+    <color name="bg_pink">#E91E63</color>
+    <color name="bg_teal">#009688</color>
+    <color name="bg_brown">#795548</color>
+    <color name="bg_grey">#9E9E9E</color>
+    <color name="bg_white">#FFFFFF</color>
+    <color name="bg_black">#000000</color>
+    <color name="bg_transparent">#00000000</color>
+    <color name="bg_light_green">#8BC34A</color>
+    <color name="bg_light_blue">#03A9F4</color>
+    <color name="bg_light_yellow">#FFCDD2</color>
+    <color name="bg_light_orange">#FFCC80</color>
+    <color name="bg_light_purple">#CE93D8</color>
+    <color name="bg_light_pink">#F8BBD0</color>
+    <color name="bg_light_teal">#80CBC4</color>
+    <color name="bg_light_brown">#D7CCC8</color>
+    <color name="bg_light_grey">#E0E0E0</color>
+    <color name="bg_light_white">#F5F5F5</color>
 </resources>
