--- a/app/src/main/res/drawable/ic_directions.xml
+++ b/app/src/main/res/drawable/ic_directions.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/drawable/ic_direction.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="48dp"
+    android:height="48dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
+    <!-- Mũi tên định hướng -->
     <path
         android:fillColor="#4CAF50"
-        android:pathData="M13.41,7L12,5.59 6.59,11 12,16.41 13.41,15 9.83,11z" />
+        android:pathData="M2,21L23,12 2,3l3.5,7H17v4H5.5L2,21z"/>
 </vector>
