--- a/app/src/main/res/menu/bottom_nav_menu_parking_owner.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_parking_owner.xml
@@ -1,15 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_parking_list"
-        android:icon="@drawable/ic_parking"
-        android:title="Bãi đỗ" />
+        android:icon="@drawable/ic_home"
+        android:title="Bãi đỗ"/>
+
     <item
         android:id="@+id/nav_add_parking"
-        android:icon="@drawable/ic_transaction"
-        android:title="Đăng ký" />
+        android:icon="@drawable/ic_add"
+        android:title="Đăng ký"/>
+
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_user"
-        android:title="Hồ sơ" />
+        android:title="Hồ sơ"/>
 </menu>
