--- a/app/src/main/res/layout/item_admin_owner.xml
+++ b/app/src/main/res/layout/item_admin_owner.xml
@@ -16,14 +16,14 @@
         <TextView
             android:id="@+id/owner_name"
             android:textStyle="bold"
-            android:text="Tên chủ bãi"
+            android:text="Tên chủ bãi:"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/owner_username"
-            android:text="@username"
+            android:text="Username"
             android:textColor="#888"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
