--- a/app/src/main/res/menu/bottom_nav_menu_parking_owner.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_parking_owner.xml
@@ -5,8 +5,13 @@
         android:title="Bãi đỗ"/>
 
     <item
+        android:id="@+id/nav_dat_cho_truc_tiep"
+        android:icon="@drawable/baseline_local_parking_24"
+        android:title="Trực tiếp"/>
+
+    <item
         android:id="@+id/nav_add_parking"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/outline_add_business_24"
         android:title="Đăng ký"/>
 
     <item
