Khôi phục thay đổi từ stash: cập nhật layout và logic cho danh sách & chi tiết bãi đỗ

--- a/app/src/main/res/layout/fragment_parking_lot_detail.xml
+++ b/app/src/main/res/layout/fragment_parking_lot_detail.xml
@@ -22,23 +22,25 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:titleEnabled="false">
 
+            <!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@color/bg_light_teal" />-->
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvParkingImages"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="305dp"
                 android:orientation="horizontal"
+                android:layout_marginTop="?attr/actionBarSize"
                 app:layout_collapseMode="parallax" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/header_gradient" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin">
+                app:layout_collapseMode="pin"
+                android:background="@color/bg_green">
 
                 <ImageView
                     android:id="@+id/ivBack"
